--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,11 @@ repositories {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '2.41.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    compile "com.xenomachina:kotlin-argparser:2.0.7"
+    compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.141.0'
+    compile 'io.github.microutils:kotlin-logging:1.6.24'
+    compile 'org.slf4j:slf4j-simple:1.6.1'
 }
 
 compileKotlin {
