--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.3.21'
 }
 
-group 'city-review-scraper'
+group 'city-ratings-scraper'
 version '1.0-SNAPSHOT'
 
 repositories {
